--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+/node_modules/
 
-# testing
-/coverage
-
-# next.js
+# Next.js build directory
 /.next/
 /out/
 
-# production
-/build
+# production build
+/build/
 
 # misc
 .DS_Store
-*.pem
+*.log
+logs
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# env files (can opt-in for committing if needed)
-.env*
+# IDE and editor folders
+.vscode/
+.idea/
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# yarn and npm error logs
+yarn-error.log
+npm-debug.log
